--- a/Styles/WelcomePageStyles.css
+++ b/Styles/WelcomePageStyles.css
@@ -1,6 +1,20 @@
-﻿body {
-    margin: 35px;
-    padding: 0px;
+﻿#welcome-page {
+    display: flex;
+    background: #FFF3E1;
+    padding: 40px;
+}
+
+h1 {
+    color: #000;
     font-family: Cinzel;
-    background: #94CCDF;
+    font-size: 65px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#page-img {
+    width: 600px;
+    height: 600px;
+    padding: 20PX;
 }
