--- a/Styles/WelcomePageStyles.css
+++ b/Styles/WelcomePageStyles.css
@@ -1,8 +1,4 @@
-﻿#bodycontent {
-   display: flex;
-}
-
-#welcome-page {
+﻿#welcome-page {
     display: flex;
     background: #FFF3E1;
     padding: 40px;
@@ -35,6 +31,44 @@ h1 {
 }
 
 #about-page {
+    display: flex;
     background-color: #FFF3E1;
-    height: 40vh;
+    height: 65vh;
 }
+
+#login-signup-page {
+    display: flex;
+    background-color: #FFF3E1;
+    height: 65vh;
+}
+
+#login-box {
+    display: block;
+    padding: 50px 25%;
+    width: 550px;
+    text-align: center;
+}
+
+    #login-box input {
+        width: 100%;
+        background: transparent;
+        border: 1px solid #000;
+        outline: 0;
+        padding: 15px 10px;
+        border-radius: 4px;
+        margin: 10px 0;
+    }
+
+    #login-box button {
+        width: 100%;
+        padding: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 20px 0;
+        border-radius: 30px;
+        background: transparent;
+        border: 1px solid #999;
+        font-weight: 500;
+        cursor: pointer;
+    }
