--- a/Site.Master
+++ b/Site.Master
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="/Styles/MasterStyles.css" />
     <link rel="stylesheet" href="/Styles/WelcomePageStyles.css" />
+    <link rel="stylesheet" href="/Styles/MasterStyles.css" />
+    <link rel="stylesheet" href="/Styles/HomeStyles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
