--- a/Site.Master
+++ b/Site.Master
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/Styles/WelcomePageStyles.css" />
     <link rel="stylesheet" href="/Styles/MasterStyles.css" />
     <link rel="stylesheet" href="/Styles/HomeStyles.css" />
+    <link rel="stylesheet" href="/Styles/ProfileFormStyles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
