--- a/Site.Master
+++ b/Site.Master
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="/Styles/WelcomePageStyles.css" />
     <link rel="stylesheet" href="/Styles/MasterStyles.css" />
     <link rel="stylesheet" href="/Styles/HomeStyles.css" />
-    <link rel="stylesheet" href="/Styles/ProfileFormStyles.css" />
+    <link rel="stylesheet" href="/Styles/ProfileFormStyles.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
@@ -36,9 +36,9 @@
 
         <nav id="home-nav">
             <ul id="page-links">
-                <li><a>HOME</a></li>
-                <li><a>ABOUT US</a></li>
-                <li><a>CONTACT US</a></li>
+                <li><a class="nav-links">HOME</a></li>
+                <li><a class="nav-links">ABOUT US</a></li>
+                <li><a class="nav-links">CONTACT US</a></li>
             </ul>
         </nav>
 
