--- a/Styles/HomeStyles.css
+++ b/Styles/HomeStyles.css
@@ -1,28 +1,60 @@
 ﻿#greet-container {
-    text-align: center;
+    display: flex;
+    text-align: left;
     background: #FFF3E1;
     padding: 30px;
+    justify-content: space-between;
+}
+
+#welcome-title {
+    font-weight: 300;
+}
+
+.profileBtn {
+    background-color: #3C638A;
+    color: #FFF3E1;
+    font-family: Cinzel;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 22px;
+    padding: 12px 30px 0px 30px;
+    margin-right: 40px;
+    margin-top: 16px;
 }
 
 #user-details-container {
     display: flex;
     justify-content: space-between;
-    background: yellow;
+    background: #FFF3E1;
     padding: 40px;
 }
 
 #box-container {
     flex-direction: column;
+    margin-left: 40px;
 }
 
 #appointment-container {
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     background: #FFE9F6;
     border-style: solid;
     border-width: 2px;
+    align-items: center;
     width: 600px;
     height: 45vh;
     border-radius: 15px;
+}
+
+.appmt-details-cancel-container {
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+}
+
+.appmt_details_container {
+    margin-top: 20px;
+    margin-right: 170px;
 }
 
 .setBtn {
@@ -37,16 +69,20 @@
 #page-img {
     width: 450px;
     height: 450px;
-    border-radius: 40px;
-    margin-right: 90px;
+    border-radius: 50%;
+    margin-right: 80px;
 }
 
 .cancelBtn {
     width: 80px;
     height: 40px;
     border-style: solid;
-    border-width: 1px;
+    border-color: #3C638A;
+    background-color: #FFF3E1;
     border-radius: 8px;
+    font-family: Cinzel;
+    color: #3C638A;
+    font-weight: 300;
 }
 
 .viewBtn {
@@ -57,10 +93,221 @@
     border-radius: 8px;
 }
 
-.startBtn {
-    width: 120px;
+.startBtn2 {
+    width: 550px;
     height: 60px;
     border-style: solid;
     border-width: 1px;
     border-radius: 8px;
+    background-color: #3C638A;
+    color: #FFF3E1;
+    font-family: Cinzel;
+    font-size: 22px;
+}
+
+.start_appmt_btn_container {
+    margin-top: 55px;
+}
+
+.upcoming_appmt_title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.our-providers-title {
+    text-align: center;
+}
+
+.provider-prof {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+    border: 2px solid #3C638A;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 25px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.two-providers {
+    display: flex;
+}
+
+.all-providers-container {
+    width: 80%;
+    margin: auto;
+    padding: 25px;
+}
+
+.user-avatar,
+.doctor-avatar,
+.calendar-icon {
+    width: 55px;
+    height: 55px;
+}
+
+.doctor_name,
+.appmt_date {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.details_cancel_container {
+    display: flex;
+    flex-direction: row;
+}
+
+.detail_container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    width: 290px;
+    margin-left: 20px;
+}
+
+.details_cancel_container {
+    display: flex;
+    padding: 25px;
+}
+
+.provider-name-title {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.provider-role,
+.provider-info-desc {
+    font-size: 13px;
+    margin-top: -20px;
+}
+
+.modal-content {
+    position: absolute;
+    width: 500px;
+    margin: auto;
+    padding: 25px;
+    border-radius: 10px;
+    background-color: #fff;
+    height: 80vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.provider-info-title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.appointment-btn {
+    width: 150px;
+    height: 40px;
+    border-radius: 20px;
+}
+
+.see_profile_btn {
+    width: 150px;
+    height: 40px;
+    border-radius: 20px;
+    align-self: auto;
+}
+
+.book_appmt_btn {
+    width: 160px;
+    height: 50px;
+    border-radius: 30px;
+    align-self: auto;
+}
+
+.provider-details {
+    margin: 0 10px 0 10px;
+}
+
+.modal-provider-prof {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 25px;
+    align-items: center;
+}
+
+.modal-info {
+    margin-left: 95px;
+}
+
+.modal-close-btn {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.btn-close {
+    cursor: pointer;
+    color: #e11b1b;
+}
+
+.btn-close:hover {
+    color: #fff;
+    background-color: #e11b1b;
+}
+
+.modal {
+    background-color: rgba(0,0,0, 0.5);
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+}
+
+.modal_bk_appmt {
+    background-color: rgba(0,0,0, 0.5);
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+}
+
+.modal_bk_appmt_content {
+    position: absolute;
+    width: 650px;
+    max-height: 70%;
+    padding: 25px;
+    border-radius: 10px;
+    background-color: #fff;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow-y: auto;
+}
+
+.health_conc_textarea {
+    border-top: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    resize: none;
+}
+
+.calendar_container {
+    width: 331px;
+    height: 336px;
+}
+
+.appointment_calendar {
+    color: #e11b1b;
+}
+
+#SelectedDateLabel {
+    color: #007bff;
 }
