--- a/Styles/MasterStyles.css
+++ b/Styles/MasterStyles.css
@@ -62,34 +62,18 @@
     padding-top: 8px;
 }
 
-#home-nav {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 20px;
-}
-
-#home-nav ul {
-    list-style-type: none;
-    padding: 20px;
-    margin-top: 1rem;
-}
-
-#page-links li {
+.navBtn {
     display: inline-block;
     padding: 20px;
-    font-size: 20px;
+    font-size: 26px;
     text-decoration: none;
     border-radius: 50px;
-    margin: 10px;
-    cursor: pointer;
-}
-
-#page-links .nav-links {
-    font-size: 26px;
+    margin: 40px 30px 10px 10px;
     text-decoration: none;
     color: black;
     font-style: normal;
     font-weight: 480;
+    cursor: pointer;
 }
 
 #footer {
