--- a/Site.Master
+++ b/Site.Master
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/Styles/MasterStyles.css" />
     <link rel="stylesheet" href="/Styles/HomeStyles.css" />
     <link rel="stylesheet" href="/Styles/ProfileFormStyles.css"/>
+    <link rel="stylesheet" href="/Styles/TherapistStyles.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
